# -finlens-RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  DEPLOYMENT.md  README.md  REPLIT_SETUP.md  docker-compose.yml  pyproject.toml  railway.toml  replit.nix
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: ingest.py  query.py
backend/ingestion/: chunker.py  embedder.py  indexer.py  loader.py
backend/rag/: generator.py  pipeline.py  retriever.py
frontend/app/: page.tsx
